[metadata]
name = asyncemy

[options]
packages = find:
install_requires =
    aiosqlite==0.17.0
    asyncpg==0.24.0
    databases==0.5.3
    fastapi==0.70.0
    psycopg2==2.9.1
    SQLAlchemy==1.4.25
    uvicorn==0.15.0

python_requires = >=3.8

[options.entry_points]
console_scripts =
    asyncemy = src.main:main
